[package]
name = "fast_firestore"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
description = "fast, plug and play firestore lib"
homepage = "https://github.com/gzbakku/fast_firestore"
repository = "https://github.com/gzbakku/fast_firestore"
readme = "README.md"
keywords = ["firestore","easy"]
categories = ["database"]
license="MIT"

[dependencies]
async-trait = "0.1.66"
firestore_grpc = "0.154.0"
futures = "0.3.27"
gcp_access_token = "0.1.1"
json = "0.12.4"
prost-types = "0.9"
tokio = { version = "1.26.0", features = ["full"] }


