[package]
name = "fast_firestore"
version = "0.1.8"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
description = "fast, plug and play firestore lib"
homepage = "https://github.com/gzbakku/fast_firestore"
repository = "https://github.com/gzbakku/fast_firestore"
readme = "README.md"
keywords = ["firestore","easy"]
categories = ["database"]
license="MIT"

# firestore_grpc = "0.154.0"

[dependencies]
async-trait = "0.1.81"
firestore_grpc = "0.224.0"
futures = "0.3.28"
gcp_access_token = "0.1.4"
json = "0.12.4"
prost-types = "0.9"
tokio = { version = "1.38.1", features = ["full"] }


